order tricks by id desc, break trick title when too long in trick view, edit and add, up z-index of trick management buttons, fix trick submission issue when js check error occurred

--- a/public/css/style-front.css
+++ b/public/css/style-front.css
@@ -181,6 +181,7 @@ article.trick-single header .trick-hero .management-btns {
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: 999;
 }
 
 article.trick-single .trick-categories .badge {
